Integrated API to display product details

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@bigbinary/neeto-cist": "1.0.6",
-    "@bigbinary/neeto-icons": "1.17.6",
+    "@bigbinary/neeto-icons": "^1.20.23",
     "@bigbinary/neetoui": "5.2.41",
     "@emotion/is-prop-valid": "1.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
@@ -48,6 +48,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "4.24.3",
+    "axios": "1.6.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
