--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-helmet": "6.1.0",
     "react-i18next": "12.3.1",
     "react-icons": "^5.4.0",
+    "react-query": "3",
     "react-refresh": "^0.11.0",
     "react-router-dom": "5.3.2",
     "react-toastify": "9.0.1",
